@@ -14,12 +14,20 @@ import com.google.cloud.storage.*;
 import com.google.firebase.FirebaseApp;
 import com.google.firebase.cloud.*;
 import jakarta.websocket.RemoteEndpoint;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.core.io.ClassPathResource;
 import org.springframework.core.io.Resource;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
 
+import javax.imageio.ImageIO;
+import java.awt.*;
+import java.awt.image.BufferedImage;
 import java.io.*;
+import java.net.HttpURLConnection;
+import java.net.MalformedURLException;
+import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -28,15 +36,19 @@ import java.util.Collection;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.concurrent.ExecutionException;
-
-@RequestMapping(path = "/ImgCollector")
+@RestController
+@RequestMapping(path = "/imgCollector")
 public class ImgCollector {
 
-    private String Name;
+
     private String Url;
+
+
     private GoogleCredentials cred;
-    public ImgCollector(GoogleCredentials credentials) {
-        cred=credentials;
+
+
+    public void setCredentials(GoogleCredentials credentials) {
+        cred = credentials;
     }
 
 
@@ -62,17 +74,10 @@ public class ImgCollector {
             blob[2]=blob[2].substring(0,blob[2].length()-1);
             blob [2]=blob[2].trim();
 
-            if(blob[0].equals("false"))
-            {
+
                 System.out.println(blob[1] + " | " + blob[2]);
-                Name=blob[2];
+
                 Url= blob[1];
-                Map<String, Object> data = new HashMap<>();
-                data.put("check",true);
-                data.put("orginal",Url);
-                data.put("username",Name);
-                // other fields can be added in a similar way
-                ApiFuture<WriteResult> result = db.collection("users").document(Name).set(data);
 
 
                 return blob[1];
@@ -81,53 +86,50 @@ public class ImgCollector {
             }
 
 
-        }
 
-        Name="done";
+
+
         return "done";
 
     }
 
 
-
+    // Get index file and store inside All_Paint_Mix.dat
     @GetMapping(path = "/downloadV2")
     public void DownloadV2() throws ExecutionException, InterruptedException, IOException {
         Storage storage = StorageOptions.newBuilder().setCredentials(cred).build().getService();
         BlobId blobId= BlobId.of("colorswapper-f6b50.appspot.com","files/dogo");
-        //  storage.downloadTo(blobId,);
 
-        Resource resource= new ClassPathResource("images");
-       // InputStream file= ;
-
-       // Path check =();
         Blob blob= storage.get(blobId);
-        blob.downloadTo(Path.of("C:\\FreeLabor481BackendColorSwapper\\FreeLabor481BackendColorSwapper\\dat"));
-    //    System.out.print(check);
+        blob.downloadTo(Paths.get("All_Paint_Mixes.dat"));
 
-       //
+
+
 
 
 
     }
 
-
+   // Sends out to firebase
     @GetMapping(path = "/upload")
     public synchronized void Upload(InputStream upload) throws ExecutionException, InterruptedException, IOException {
-        if(!Name.equals("done"))
-        {
 
-            Storage storage = StorageOptions.newBuilder().setCredentials(cred).build().getService();
+
+            Storage storage = StorageOptions.newBuilder().setCredentials(getCred()).build().getService();
             Firestore db = FirestoreClient.getFirestore();
 
-            BlobId blobId=BlobId.of("colorswapper-f6b50.appspot.com","images/"+Name+"/Copy");
+            BlobId blobId=BlobId.of("colorswapper-f6b50.appspot.com","images/"+"User"+"/Copy");
             BlobInfo blobInfo= BlobInfo.newBuilder(blobId).setContentType("image/png").build();
 
             Blob uploading =storage.create(blobInfo,upload);
-          System.out.print("OK "+Url);
+            System.out.print("OK "+Url);
 
 
-        }
 
+    }
+
+    public GoogleCredentials getCred() {
+        return cred;
     }
 
 
